# philes

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  workspace.code-workspace
philes-server/static/: index.html
philes-server/static/static/css/: main.f5337b91.chunk.css.map
philes-server/static/static/js/: 2.88573c26.chunk.js.map  3.95264531.chunk.js  main.801b5f24.chunk.js
src/: db.rs  files.rs  main.rs  uploads.rs
src/keystore/: mod.rs
static/: index.html  main.js
web/: package-lock.json  package.json
web/public/: index.html
web/src/: .prettierrc  App.js  App.scss  colors.scss  index.scss
web/src/Components/BrowseTable/: BrowseTable.js  FileRow.js
web/src/Components/Button/: Button.js  Button.scss
web/src/Components/FileListItem/: FileListItem.js  FileListItem.scss
web/src/Components/FileThumbnail/: FileThumbnail.js
web/src/Components/Header/: Header.js  Header.scss
web/src/Components/UploadArea/: UploadArea.js  UploadArea.scss
web/src/Pages/: pageBase.scss
web/src/Pages/About/: About.js
web/src/Pages/Browse/: Browse.js
web/src/Pages/Upload/: Upload.js  Upload.scss
web/src/Services/: FileApi.js
