[package]
name = "philes-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-multipart = "0.3.0"
futures = "0.3.17"
actix-cors = "0.5.4"
# actix-web-static-files = "3.0"


[build-dependencies]
# actix-web-static-files = "3.0"