[package]
name = "philes-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4.4"
actix-multipart = "0.6"
futures = "0.3"
actix-cors = "0.6"
nanoid = "0.4"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
actix-web-static-files = "4.0"
static-files = "0.2"

[build-dependencies]
static-files = "0.2"